<resources>
    <string name="app_name">Administrador de tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_sesion">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="remember_user">Recordar usuario en este dispositivo</string>
    <string name="start">Iniciar</string>
    <string name="not_have_account">No tengo cuenta</string>
    <string name="administrador_tareas">Administrador de tareas</string>
    <string name="create_account">Crear cuenta</string>
    <string name="complete_name">Nombre completo</string>

    <string name="registrer">Registrarme</string>
    <string name="ya_tengo_cuenta">Ya tengo una cuenta</string>
    <string name="star_sesion">Iniciar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_required">es requerido</string>
</resources>
